project completed (grid, cells, slider, buttonprompt)

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <p id="slider-value"></p>
 </div>
 </div>
-<button id="btn">click to choose your grid resolution</button>
-
+<div id="btn-container">
+<button id="btn">resolution</button>
+</div>
 </body>
 
 <script src="script.js"></script>
